<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityGatewaySearch" >

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#24FFFFFF"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/search_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_devices_func_layout"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_title" >

    </ListView>

    <LinearLayout
        android:id="@+id/activity_devices_func_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/tab_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#20FFFFFF"
            android:drawableTop="@drawable/selector_tab_search"
            android:text="@string/tab_button_search"
            android:textSize="12sp" />

        <Button
            android:id="@+id/tab_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#20FFFFFF"
            android:drawableTop="@drawable/selector_tab_back"
            android:text="@string/tab_button_back"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>