<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRoomList" >

    <RelativeLayout
        android:id="@+id/activity_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:background="#24FFFFFF"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/gw_notify_setting"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_devices_func_layout"
        android:layout_below="@id/activity_title_layout" >

    </ListView>

    <LinearLayout
        android:id="@+id/activity_devices_func_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/tab_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#20FFFFFF"
            android:drawableTop="@drawable/selector_tab_edit"
            android:text="@string/tab_button_edit"
            android:textSize="12sp" />

        <Button
            android:id="@+id/tab_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#20FFFFFF"
            android:drawableTop="@drawable/selector_tab_back"
            android:text="@string/tab_button_back"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>