<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/Layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/admintoolLayout"
        android:gravity="center|top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2fffffff"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/room_add_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_add_message"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:hint="@string/room_add_message">
		
                <requestFocus />
            </EditText>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/ImageView01"
                    android:layout_alignTop="@+id/ImageView01"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/room" />

                <ImageView
                    android:id="@+id/ImageView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/room"
                    android:visibility="invisible" />
            </RelativeLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_select_picture" />

        </LinearLayout>

    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/admintoolLayout"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:numColumns="3"
        android:padding="0dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        android:visibility="invisible" >

    </GridView>

    <LinearLayout
        android:id="@+id/admintoolLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/tab_save"
            style="@style/AppBaseTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#20FFFFFF"
            android:drawableTop="@drawable/selector_tab_save"
            android:text="@string/tab_button_save"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>
